--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
   "dependencies": {
     "@types/react": "~18.2.14",
     "add": "^2.0.6",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "expo": "~49.0.15",
     "expo-asset": "~8.10.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-get-random-values": "^1.10.0",
     "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-vector-icons": "^10.0.2",
     "react-native-virtualized-view": "^1.0.0",
     "typescript": "^5.1.3",
-    "yarn": "^1.22.21",
-    "expo-splash-screen": "~0.20.5"
+    "uuid": "^9.0.1",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
