--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "expo": "~49.0.15",
     "expo-asset": "~8.10.1",
-    "expo-splash-screen": "~0.20.5",
+    "expo-splash-screen": "^0.22.0",
     "expo-sqlite": "^11.6.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
