--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "expo-asset": "~8.10.1",
     "expo-blur": "^12.6.0",
     "expo-font": "^11.6.0",
+    "expo-image-picker": "^14.5.0",
     "expo-splash-screen": "^0.22.0",
     "expo-sqlite": "^11.6.0",
     "expo-status-bar": "~1.6.0",
