--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "expo": "~49.0.15",
     "expo-asset": "~8.10.1",
     "expo-blur": "^12.6.0",
-    "expo-font": "^11.6.0",
+    "expo-font": "~11.4.0",
     "expo-image-picker": "^14.5.0",
     "expo-splash-screen": "^0.22.0",
     "expo-sqlite": "^11.6.0",
     "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-get-random-values": "^1.10.0",
