--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-sqlite": "^11.6.0",
     "expo-status-bar": "~1.6.0",
     "expo-system-ui": "~2.4.0",
+    "expo-updates": "~0.18.17",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-get-random-values": "^1.10.0",
